Fixed issue with the content-footer spacing

--- a/style.css
+++ b/style.css
@@ -452,6 +452,10 @@ img.wp-smiley,
 	padding: 0 0 30px 0;
 }
 
+#primary:last-child {
+	margin-bottom: 30px;
+}
+
 #primary.no-comments-area {
 	margin-bottom: 40px;
 }
